Comming Soon Feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="tujuan">Tujuan Anda</string>
     <string name="reset">reset</string>
     <string name="maps">maps</string>
+    <string name="comming_soon">This Feature is Comming Up Soon</string>
 </resources>
